--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,21 +1,20 @@
----
----
-
 @import "{{ site.theme }}";
 
-
 .page-header {
-    color: 
-#fff;
-text-align: center;
-background-color:
-#159957;
-background-image: linear-gradient(120deg,#ff7800, #701599)};
+  color: #fff;
+  text-align: center;
+  background-color: #159957;
+  background-image: linear-gradient(120deg, #ff7800, #701599);
+}
 
-
-.main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
-    margin-top: 2rem;
-    margin-bottom: 1rem;
-    font-weight: normal;
-    color: #701599;
+.main-content h1,
+.main-content h2,
+.main-content h3,
+.main-content h4,
+.main-content h5,
+.main-content h6 {
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+  font-weight: normal;
+  color: #701599;
 }
