--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,3 +18,17 @@
   font-weight: normal;
   color: #701599;
 }
+
+a {
+  color: #2A2A2E
+}
+
+.card {
+  background: #fff;
+  border-radius: 2px;
+  display: inline-block;
+  height: 300px;
+  margin: 1rem;
+  position: relative;
+  width: 300px;
+}
